<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_simulator"
            android:icon="@drawable/baseline_account_balance_wallet_black_18"
            android:title="@string/item_estate_loan_simulator" />
        <item
            android:id="@+id/activity_main_drawer_search"
            android:icon="@drawable/baseline_search_black_18"
            android:title="@string/item_search" />
        <item
            android:id="@+id/activity_main_drawer_create"
            android:icon="@drawable/baseline_add_business_black_18"
            android:title="@string/item_create" />
        <item
            android:id="@+id/activity_main_drawer_preferences"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="@string/item_prefs" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/baseline_power_settings_new_black_18"
            android:title="@string/logout_title" />

    </group>


</menu>