<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_create"
        android:icon="@drawable/baseline_add_business_black_18"
        android:title="@string/item_create"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu"
        android:icon="@drawable/baseline_menu_black_18"
        android:title="@string/item_create"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_map"
                android:icon="@drawable/baseline_map_black_18"
                android:title="@string/map_title" />

            <item
                android:id="@+id/menu_search"
                android:icon="@drawable/baseline_search_black_18"
                android:title="@string/item_search" />
        </menu>

    </item>

</menu>